@startuml
skinparam classAttributeIconSize 0

class Client {
  +id: str
  +first_name: str
  +last_name: str
  +address: str?
  +passport: str?
  +is_verified(): bool
}

class ClientBuilder {
  +set_name(first, last): ClientBuilder
  +set_address(address): ClientBuilder
  +set_passport(passport): ClientBuilder
  +build(): Client
}

abstract class Account {
  +id: str
  +balance: float
  +deposit(amount)
  +withdraw(amount)*
  +transfer(target, amount)
}

class DebitAccount
class DepositAccount {
  +end_date: datetime
}
class CreditAccount {
  +credit_limit: float
  +commission: float
}

Account <|-- DebitAccount
Account <|-- DepositAccount
Account <|-- CreditAccount

class AccountFactory {
  +create_debit(client): DebitAccount
  +create_deposit(client, end_date): DepositAccount
  +create_credit(client, limit, commission): CreditAccount
}

abstract class Command {
  +execute()*
  +undo()*
}

class WithdrawCommand
class TransferCommand

Command <|-- WithdrawCommand
Command <|-- TransferCommand

class Bank {
  +suspicious_limit: float
  +add_client(client)
  +add_account(account)
  +execute_transaction(command)
  +rollback(command=None)
}

ClientBuilder --> Client
AccountFactory ..> Account
Bank o-- Client
Bank o-- Account
Bank o-- Command
Account --> Client
WithdrawCommand --> Account
TransferCommand --> Account
Bank ..> WithdrawCommand
Bank ..> TransferCommand

@enduml
